@@ -31,6 +31,8 @@ Library
 Tests
 -----
 
+- Issue #19595: Re-enabled a long-disabled test in test_winsound.
+
 - Issue #19588: Fixed tests in test_random that were silently skipped most
   of the time.  Patch by Julian Gindi.
 
